Fixed styling with dark mode

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -137,7 +137,8 @@ nav a:hover {
 
 main {
     font-family: 'Karla', sans-serif;
-    color: #234547
+    color: #234547;
+    padding-bottom: 1.5rem;
 }
 
 .hero-section {
@@ -163,6 +164,15 @@ main {
     border-radius: 10px;
     font-weight: bold;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
+    cursor: pointer;
+}
+
+#action:visited {
+    color: black;
+}
+
+#ction:hover {
+    color: rgb(70, 70, 70);
 }
 
 .events img {
@@ -176,6 +186,10 @@ main {
     padding-top: 0;
     border: 1px solid gray;
     background-color: #cfcfcf;
+}
+
+section.section3 {
+    margin-bottom: 0.5rem;
 }
 
 .section1 p {
