--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -76,6 +76,7 @@
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
+        padding-bottom: 1.5rem;
     }
 
     #menu {
@@ -175,7 +176,6 @@
         grid-column: 2/3;
         grid-row: 2/3;
         width: 75%;
-        margin-top: -0.25rem;
     }
 
     section p {
@@ -186,6 +186,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+
+    section.section3 {
+        margin-bottom: 3rem;
     }
 
     .section-link {
@@ -214,7 +218,6 @@
     footer {
         display: grid;
         grid-template-columns: 1fr 6fr;
-        margin-top: 1.5rem;
     }
 
     .footer-break {
