--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -78,6 +78,12 @@
         padding: 1rem;
     }
 
+    main {
+        padding-bottom: 2rem;
+
+
+    }
+
     .section1,
     .section2,
     .section3 {
@@ -91,5 +97,9 @@
 
     #menu {
         display: none;
+    }
+
+    section.section3 {
+        margin-bottom: 1rem;
     }
 }
